# N-Body-Simulation

./: CMakeLists.txt  README.md  benchmark.py  presentation.tex  visualize.py
include/: nbody.h
output/: energy.csv
output/bh/: energy.csv
output/direct/: energy.csv
src/: barnes_hut.cpp  force.cpp  integrator.cpp  main.cpp
